--- a/Solution.cbp
+++ b/Solution.cbp
@@ -6,18 +6,25 @@
 		<Option pch_mode="2" />
 		<Option compiler="gcc" />
 		<Build>
-			<Target title="Debug">
-				<Option output="Build/Debug/MageEngine" prefix_auto="1" extension_auto="1" />
-				<Option object_output="Intermediate/Debug/" />
+			<Target title="Linux-Dbg">
+				<Option output="Build/Linux-Dbg/Engine" prefix_auto="1" extension_auto="1" />
+				<Option working_dir="Build/Linux-Dbg/" />
+				<Option object_output="Intermediate/Linux-Dbg/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
+				<Option use_console_runner="0" />
 				<Compiler>
 					<Add option="-g" />
 				</Compiler>
+				<Linker>
+					<Add option="-lGL -lGLU -lIL -lGLEW" />
+					<Add library="/usr/lib/x86_64-linux-gnu/libSDL-1.2.so.0.11.4" />
+				</Linker>
 			</Target>
-			<Target title="Release">
-				<Option output="Build/Release/MageEngine" prefix_auto="1" extension_auto="1" />
-				<Option object_output="Intermediate/Release/" />
+			<Target title="Linux-Rls">
+				<Option output="Build/Linux-Rls/Engine" prefix_auto="1" extension_auto="1" />
+				<Option working_dir="Build/Linux-Rls" />
+				<Option object_output="Intermediate/Linux-Rls/" />
 				<Option type="0" />
 				<Option compiler="gcc" />
 				<Compiler>
@@ -25,6 +32,8 @@
 				</Compiler>
 				<Linker>
 					<Add option="-s" />
+					<Add option="-lGL -lGLU -lIL -lGLEW" />
+					<Add library="/usr/lib/x86_64-linux-gnu/libSDL-1.2.so.0.11.4" />
 				</Linker>
 			</Target>
 		</Build>
@@ -37,9 +46,7 @@
 		</Linker>
 		<Unit filename="include/Content.h" />
 		<Unit filename="include/Entity.h" />
-		<Unit filename="include/Log.h">
-			<Option target="Debug" />
-		</Unit>
+		<Unit filename="include/Log.h" />
 		<Unit filename="include/MageGame.h" />
 		<Unit filename="include/Texture2D.h" />
 		<Unit filename="include/Window.h" />
@@ -47,9 +54,7 @@
 		<Unit filename="include/image.h" />
 		<Unit filename="src/Content.cpp" />
 		<Unit filename="src/Entity.cpp" />
-		<Unit filename="src/Log.cpp">
-			<Option target="Debug" />
-		</Unit>
+		<Unit filename="src/Log.cpp" />
 		<Unit filename="src/MageGame.cpp" />
 		<Unit filename="src/Texture2D.cpp" />
 		<Unit filename="src/Window.cpp" />
