--- a/Solution.cbp
+++ b/Solution.cbp
@@ -19,7 +19,7 @@
 				</Compiler>
 				<Linker>
 					<Add option="-lGL -lGLU -lIL -lGLEW" />
-					<Add library="\usr\lib\x86_64-linux-gnu\libSDL-1.2.so.0.11.4" />
+					<Add library="/usr/lib/x86_64-linux-gnu/libSDL-1.2.so.0.11.4" />
 				</Linker>
 			</Target>
 			<Target title="Linux-Rls">
@@ -35,7 +35,7 @@
 				<Linker>
 					<Add option="-s" />
 					<Add option="-lGL -lGLU -lIL -lGLEW" />
-					<Add library="\usr\lib\x86_64-linux-gnu\libSDL-1.2.so.0.11.4" />
+					<Add library="/usr/lib/x86_64-linux-gnu/libSDL-1.2.so.0.11.4" />
 				</Linker>
 			</Target>
 			<Target title="Windows-Dbg">
@@ -53,7 +53,7 @@
 				<Linker>
 					<Add option="-lopengl32 -lDevIL -lSDL -lglu32" />
 					<Add option="-static-libgcc -static-libstdc++" />
-					<Add library="C:\glew-1.9.0\lib\MinGW\libglew32.dll.a" />
+					<Add library="C:/glew-1.9.0/lib/MinGW/libglew32.dll.a" />
 					<Add directory="C:/DevIL/lib" />
 					<Add directory="C:/SDL/SDL-1.2.15/lib/x86" />
 				</Linker>
@@ -73,7 +73,7 @@
 				<Linker>
 					<Add option="-lopengl32 -lDevIL -lSDL -lglu32" />
 					<Add option="-static-libgcc -static-libstdc++" />
-					<Add library="C:\glew-1.9.0\lib\MinGW\libglew32.dll.a" />
+					<Add library="C:/glew-1.9.0/lib/MinGW/libglew32.dll.a" />
 					<Add directory="C:/DevIL/lib" />
 					<Add directory="C:/SDL/SDL-1.2.15/lib/x86" />
 				</Linker>
@@ -88,6 +88,7 @@
 		</Linker>
 		<Unit filename="include/Content.h" />
 		<Unit filename="include/Entity.h" />
+		<Unit filename="include/InputState.h" />
 		<Unit filename="include/Log.h" />
 		<Unit filename="include/MageGame.h" />
 		<Unit filename="include/Texture2D.h" />
@@ -96,6 +97,7 @@
 		<Unit filename="include/image.h" />
 		<Unit filename="src/Content.cpp" />
 		<Unit filename="src/Entity.cpp" />
+		<Unit filename="src/InputState.cpp" />
 		<Unit filename="src/Log.cpp" />
 		<Unit filename="src/MageGame.cpp" />
 		<Unit filename="src/Texture2D.cpp" />
