--- a/Solution.cbp
+++ b/Solution.cbp
@@ -48,7 +48,6 @@
 				<Option compiler="gcc" />
 				<Compiler>
 					<Add option="-std=c++11" />
-					<Add option="-Wall" />
 					<Add option="-g" />
 					<Add directory="C:/glew-1.10.0/include" />
 					<Add directory="C:/SDL2-2.0.0/x86_64-w64-mingw32/include" />
@@ -74,23 +73,27 @@
 				<Option type="0" />
 				<Option compiler="gcc" />
 				<Compiler>
+					<Add option="-std=c++11" />
 					<Add directory="C:/glew-1.10.0/include" />
 					<Add directory="C:/SDL2-2.0.0/x86_64-w64-mingw32/include/" />
 					<Add directory="C:/DevIL/include" />
 					<Add directory="include" />
 				</Compiler>
 				<Linker>
-					<Add option="-lopengl32 -lDevIL -lSDL2 -lglu32" />
-					<Add option="-static-libgcc -static-libstdc++" />
-					<Add library="C:\glew-1.10.0\MinGW\libglew32.a" />
-					<Add directory="C:/DevIL/lib" />
-					<Add directory="C:/SDL/SDL-1.2.15/lib/x86" />
+					<Add option="-static-libgcc -std=c++0x" />
+					<Add option="-lglew32 -lopengl32 -lglu32" />
+					<Add option="-lSDL2main -lSDL2" />
+					<Add option="-lDevIL" />
+					<Add library="C:\glew-1.10.0 Source\lib\libglew32.dll.a" />
+					<Add directory="C:/SDL2-2.0.0/x86_64-w64-mingw32/lib" />
+					<Add directory="C:/DevIL/" />
+					<Add directory="C:/glew-1.10.0 Source/lib" />
 				</Linker>
 			</Target>
 		</Build>
 		<Compiler>
-			<Add option="`sdl-config --cflags`" />
 			<Add option="-Wall" />
+			<Add option="`sdl-config --cflags`" />
 		</Compiler>
 		<Linker>
 			<Add option="`sdl-config --libs`" />
